@@ -298,6 +298,8 @@ recentchanges.rss.feed2=Cambios recientes incluyendo cambios peque\u00F1os
 recentchanges.rss.feed3=Cambios recientes enlazando a la versi\u00F3n cambiada
 recentchanges.rss.feed4=Cambios recientes incluyendo cambios peque\u00F1os y enlazando a la versi\u00F3n cambiada
 recentchanges.title=Cambios recientes
+register.caption.accountdetails=Datos de la cuenta
+register.caption.changepassword=Change Password
 register.caption.confirmpassword=Confirmar nueva contrase\u00F1a
 register.caption.displayname=Nombre a mostrar
 register.caption.email=Email
