@@ -275,6 +275,8 @@ recentchanges.rss.feed2=Recent Changes including minor changes
 recentchanges.rss.feed3=Recent Changes linking to changed version
 recentchanges.rss.feed4=Recent Changes including minor changes and linking to changed version
 recentchanges.title=Changement r\u00E9cents
+register.caption.accountdetails=Enregistrer
+register.caption.changepassword=Change Password
 register.caption.confirmpassword=Confirmer le nouveau mot de passe
 register.caption.displayname=Nom affich\u00E9
 register.caption.email=Couriel
