@@ -298,6 +298,8 @@ recentchanges.rss.feed2=Cambios Recentes inclu\u00EDndo cambios pequenos
 recentchanges.rss.feed3=Cambios Recentes enlazando \u00E1 versi\u00F3n cambiada
 recentchanges.rss.feed4=Cambios Recentes inclu\u00EDndo cambios pequenos e enlazando \u00E1 versi\u00F3n cambiada
 recentchanges.title=Cambios Recentes
+register.caption.accountdetails=Datos da conta
+register.caption.changepassword=Change Password
 register.caption.confirmpassword=Confirmar novo contrasinal
 register.caption.displayname=Nome a mostrar
 register.caption.email=Correo electr\u00F3nico
