@@ -274,6 +274,8 @@ recentchanges.rss.feed2=Nedavne promjene uklju\u010Duju\u0107i i one manje
 recentchanges.rss.feed3=Nedavne promjene s poveznicama na promjenjene verzije
 recentchanges.rss.feed4=Nedavne promjene uklju\u010Duju\u0107i manje promjene s poveznicama na promjenjene verzije
 recentchanges.title=Nedavne promjene
+register.caption.accountdetails=Detalji o ra\u010Dunu
+register.caption.changepassword=Change Password
 register.caption.confirmpassword=Potvrdi novu zaporku
 register.caption.displayname=Prika\u017Ei ime
 register.caption.email=Email
