@@ -295,6 +295,8 @@ recentchanges.rss.feed2=Ned\u00E1vne zmeny vr\u00E1tane mal\u00FDch \u00FAprav
 recentchanges.rss.feed3=Ned\u00E1vne zmeny odkazuj\u00FAce na zmenen\u00FA verziu
 recentchanges.rss.feed4=Ned\u00E1vne zmeny vr\u00E1tane mal\u00FDch \u00FAprav a zmien odkazuj\u00FAcich na zmenen\u00FA verziu
 recentchanges.title=Ned\u00E1vne zmeny
+register.caption.accountdetails=Detaily \u00FA\u010Dtu
+register.caption.changepassword=Change Password
 register.caption.confirmpassword=Potvr\u010Fte nov\u00E9 heslo
 register.caption.displayname=Zobrazovan\u00E9 meno
 register.caption.email=Email
