@@ -295,6 +295,8 @@ recentchanges.rss.feed2=Recent Changes including minor changes
 recentchanges.rss.feed3=Recent Changes linking to changed version
 recentchanges.rss.feed4=Recent Changes including minor changes and linking to changed version
 recentchanges.title=Senaste \u00C4ndringar
+register.caption.accountdetails=Registrera
+register.caption.changepassword=Change Password
 register.caption.confirmpassword=Bekr\u00E4fta nytt l\u00F6senord
 register.caption.displayname=Display Name
 register.caption.email=Email
