@@ -274,6 +274,8 @@ recentchanges.rss.feed2=Recent Changes including minor changes
 recentchanges.rss.feed3=Recent Changes linking to changed version
 recentchanges.rss.feed4=Recent Changes including minor changes and linking to changed version
 recentchanges.title=\u041E\u0441\u0442\u0430\u043D\u043D\u0456 \u0440\u0435\u0434\u0430\u0433\u0443\u0432\u0430\u043D\u043D\u044F
+register.caption.accountdetails=\u0406\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0456\u044F \u043F\u0440\u043E \u043E\u0431\u043B\u0456\u043A\u043E\u0432\u0438\u0439 \u0437\u0430\u043F\u0438\u0441
+register.caption.changepassword=Change Password
 register.caption.confirmpassword=\u041F\u0456\u0434\u0442\u0432\u0435\u0440\u0434\u0436\u0435\u043D\u043D\u044F \u043D\u043E\u0432\u043E\u0433\u043E \u043F\u0430\u0440\u043E\u043B\u044E
 register.caption.displayname=\u0406\u043C'\u044F \u043A\u043E\u0440\u0438\u0441\u0442\u0443\u0432\u0430\u0447\u0430 (\u0434\u043B\u044F \u0432\u0456\u0434\u043E\u0431\u0440\u0430\u0436\u0435\u043D\u043D\u044F)
 register.caption.email=\u0415\u043B. \u043F\u043E\u0448\u0442\u0430
